--- a/thesis.tex
+++ b/thesis.tex
@@ -328,7 +328,7 @@
 % \oddCoverChapter
 % \chapterBackground{figs/chapters/b5/Chapter1_01.png}{figs/chapters/b5/Chapter1_02.png}{Radu Carstean}{Pawn Mate}{Sketchfab}{black}
 
-\oddChapter
+\blankPage
 \partIntro{I}{Introduction and overview}{This section introduces a shallow background of Remote Sensing as well as the aim and objectives of this doctoral dissertation. Then, the state-of-the-art on the fusion and simulation of Remote Sensing data is presented.}
 
 % \input{chapters/introduction.tex}
