Revise chapter 'multispectral point cloud'

--- a/glossary.tex
+++ b/glossary.tex
@@ -173,6 +173,7 @@
 \newacronym[longplural={Ultraviolet}]{uv}{UV}{Ultraviolet}
 \newacronym[longplural={Uniform Manifold Approximation and Projection}]{umap}{UMAP}{Uniform Manifold Approximation and Projection}
 \newacronym[longplural={Unmanned Aerial System}]{uas}{UAS}{Unmanned Aerial System}
+\newacronym[longplural={Video Random Access Memory}]{vram}{VRAM}{Video Random Access Memory}
 \newacronym[longplural={Virtual Reality}]{vr}{VR}{Virtual Reality}
 \newacronym[longplural={Visual Simultaneous Localization and Mapping}]{vslam}{VSLAM}{Visual Simultaneous Localization and Mapping}
 
