--- a/glossary.tex
+++ b/glossary.tex
@@ -11,10 +11,9 @@
 \newacronym[longplural={Average Accuracy}]{aa}{AA}{Average Accuracy}
 \newacronym[longplural={Axis-Aligned Bounding Box}]{aabb}{AABB}{Axis-Aligned Bounding Box}
 \newacronym[longplural={Back-Projection MRAE}]{bpmrae}{BPMRAE}{Back-Projection MRAE}
-\newacronym[longplural={Best Next View}]{bnv}{BNV}{Best Next View}
 \newacronym[longplural={Bidirectional Reflectance Distribution Function}]{brdf}{BRDF}{Bidirectional Reflectance Distribution Function}
 \newacronym[longplural={Bidirectional Scatter Distribution Function}]{bsdf}{BSDF}{Bidirectional Scatter Distribution Function}
-\newacronym[longplural={Bidirectional Scattering Surface Distribution Function}]{bssdf}{BSSDF}{Bidirectional Scattering Surface Distribution Functions}
+\newacronym[longplural={Bidirectional Scattering Surface Distribution Function}]{bssdf}{BSSDF}{Bidirectional Scattering Surface Distribution Function}
 \newacronym[longplural={Backpack-mounted Mobile LiDAR Scanning}]{bmmls}{BMMLS}{Backpack-mounted Mobile LiDAR Scanning}
 \newacronym[longplural={Boundary Volume Hierarchy}]{bvh}{BVH}{BBoundary Volume Hierarchy}
 \newacronym[longplural={Building Information Modelling}]{bim}{BIM}{Building Information Modelling}
@@ -120,7 +119,7 @@
 \newacronym[longplural={Peak Signal-to-Noise Ratio}]{psnr}{PSNR}{Peak Signal-to-Noise Ratio}
 \newacronym[longplural={Perspective n Point}]{pnp}{PnP}{Perspective n Point}
 \newacronym[longplural={Physically-based Rendering}]{pbr}{PBR}{Physically-based Rendering}
-\newacronym[longplural={Planning 4 Scanning}]{p4s}{P4S}{Planning 4 Scanning}
+\newacronym[longplural={Planning for Scanning}]{p4s}{P4S}{Planning for Scanning}
 \newacronym[longplural={Point Cloud Compression}]{pcc}{PCC}{Point Cloud Compression}
 \newacronym[longplural={Point Cloud Library}]{pcl}{PCL}{Point Cloud Library}
 \newacronym[longplural={Polygon File Format}]{ply}{PLY}{Polygon File Format}
