--- a/references.bib
+++ b/references.bib
@@ -1,4 +1,123 @@
 
+@misc{nasa_earth_observatory_landsat_2021,
+	title = {Landsat 8},
+	url = {https://landsat.gsfc.nasa.gov/satellites/landsat-8/},
+	abstract = {Landsat 8 launched on February 11, 2013, from Vandenberg Air Force Base, California, on an Atlas-V 401 rocket, with the extended payload fairing (EPF) from United Launch Alliance, LLC. (The Landsat 8 Launch in Quotes.) The Landsat 8 satellite payload consists of two science instruments—the Operational Land Imager (OLI) and the Thermal Infrared Sensor (TIRS).},
+	language = {en-US},
+	urldate = {2023-02-01},
+	journal = {Lansat 8 Mission Details},
+	author = {{NASA Earth Observatory}},
+	month = nov,
+	year = {2021},
+}
+
+@misc{nasa_earth_observatory_landsat_2021-1,
+	title = {Landsat 9},
+	url = {https://landsat.gsfc.nasa.gov/satellites/landsat-9/landsat-9-overview/},
+	abstract = {Landsat 9 is the latest satellite in the Landsat series—it continues Landsat’s irreplaceable record of Earth’s land surface. It launched from Vandenberg Space Force Base on September 27, 2021. Landsat 9 largely replicates its predecessor Landsat 8. Landsat 9 carries two science instruments Both instruments have sensors with moderate spatial resolution—15 m (49 ft), 30 m},
+	language = {en-US},
+	urldate = {2023-02-01},
+	journal = {Landsat 9 Overview},
+	author = {{NASA Earth Observatory}},
+	month = nov,
+	year = {2021},
+}
+
+@article{masek_landsat_2020,
+	title = {Landsat 9: {Empowering} open science and applications through continuity},
+	volume = {248},
+	issn = {0034-4257},
+	shorttitle = {Landsat 9},
+	url = {https://www.sciencedirect.com/science/article/pii/S0034425720303382},
+	doi = {10.1016/j.rse.2020.111968},
+	abstract = {The history of Earth observation from space is well reflected through the Landsat program. With data collection beginning with Landsat-1 in 1972, the program has evolved technical capabilities while maintaining continuity of land observations. In so doing, Landsat has provided a critical reference for assessing long-term changes to Earth's land environment due to both natural and human forcing. Poised for launch in mid-2021, the joint NASA-USGS Landsat 9 mission will continue this important data record. In many respects Landsat 9 is a clone of Landsat-8. The Operational Land Imager-2 (OLI-2) is largely identical to Landsat 8 OLI, providing calibrated imagery covering the solar reflected wavelengths. The Thermal Infrared Sensor-2 (TIRS-2) improves upon Landsat 8 TIRS, addressing known issues including stray light incursion and a malfunction of the instrument scene select mirror. In addition, Landsat 9 adds redundancy to TIRS-2, thus upgrading the instrument to a 5-year design life commensurate with other elements of the mission. Initial performance testing of OLI-2 and TIRS-2 indicate that the instruments are of excellent quality and expected to match or improve on Landsat 8 data quality. Landsat-9 will maintain the current data acquisition rate of up to 740 scenes per day, with these scenes available from the Landsat archive at no cost to users. In this communication, we provide background and rationale for the Landsat 9 mission, describe the instrument payloads and ground system, and discuss data products available from the Landsat 9 mission through USGS.},
+	language = {en},
+	urldate = {2023-02-01},
+	journal = {Remote Sensing of Environment},
+	author = {Masek, Jeffrey G. and Wulder, Michael A. and Markham, Brian and McCorkel, Joel and Crawford, Christopher J. and Storey, James and Jenstrom, Del T.},
+	month = oct,
+	year = {2020},
+	pages = {111968},
+}
+
+@techreport{us_geological_survey_landsat_2019,
+	address = {Reston, VA},
+	type = {{USGS} {Numbered} {Series}},
+	title = {Landsat 9},
+	url = {http://pubs.er.usgs.gov/publication/fs20193008},
+	abstract = {Landsat 9 is a partnership between the National Aeronautics and Space Administration and the U.S. Geological Survey that will continue the Landsat program’s critical role of repeat global observations for monitoring, understanding, and managing Earth’s natural resources. Since 1972, Landsat data have provided a unique resource for those who work in agriculture, geology, forestry, regional planning, education, mapping, and global-change research. Landsat images have also proved invaluable to the International Charter: Space and Major Disasters, supporting emergency response and disaster relief to save lives. With the addition of Landsat 9, the Landsat program’s record of land imaging will be extended to over half a century.},
+	number = {2019-3008},
+	urldate = {2023-05-08},
+	institution = {U.S. Geological Survey},
+	author = {{U.S. Geological Survey}},
+	year = {2019},
+	pages = {2},
+}
+
+@book{emery_introduction_2017,
+	title = {Introduction to {Satellite} {Remote} {Sensing}: {Atmosphere}, {Ocean}, {Land} and {Cryosphere} {Applications}},
+	isbn = {978-0-12-809259-0},
+	shorttitle = {Introduction to {Satellite} {Remote} {Sensing}},
+	abstract = {Introduction to Satellite Remote Sensing: Atmosphere, Ocean and Land Applications is the first reference book to cover ocean applications, atmospheric applications, and land applications of remote sensing.  Applications of remote sensing data are finding increasing application in fields as diverse as wildlife ecology and coastal recreation management. The technology engages electromagnetic sensors to measure and monitor changes in the earth’s surface and atmosphere. The book opens with an introduction to the history of remote sensing, starting from when the phrase was first coined. It goes on to discuss the basic concepts of the various systems, including atmospheric and ocean, then closes with a detailed section on land applications.  Due to the cross disciplinary nature of the authors’ experience and the content covered, this is a must have reference book for all practitioners and students requiring an introduction to the field of remote sensing. Provides study questions at the end of each chapter to aid learning Covers all satellite remote sensing technologies, allowing readers to use the text as instructional material Includes the most recent technologies and their applications, allowing the reader to stay up-to-date Delves into laser sensing (LIDAR) and commercial satellites (DigitalGlobe) Presents examples of specific satellite missions, including those in which new technology has been introduced},
+	language = {en},
+	publisher = {Elsevier},
+	author = {Emery, Bill and Camps, Adriano},
+	month = aug,
+	year = {2017},
+	keywords = {Science / Earth Sciences / Geology, Science / Physics / Geophysics},
+}
+
+@article{boulch_deep_2016,
+	title = {Deep {Learning} for {Robust} {Normal} {Estimation} in {Unstructured} {Point} {Clouds}},
+	volume = {35},
+	issn = {1467-8659},
+	url = {https://onlinelibrary.wiley.com/doi/abs/10.1111/cgf.12983},
+	doi = {10.1111/cgf.12983},
+	abstract = {Normal estimation in point clouds is a crucial first step for numerous algorithms, from surface reconstruction and scene understanding to rendering. A recurrent issue when estimating normals is to make appropriate decisions close to sharp features, not to smooth edges, or when the sampling density is not uniform, to prevent bias. Rather than resorting to manually-designed geometric priors, we propose to learn how to make these decisions, using ground-truth data made from synthetic scenes. For this, we project a discretized Hough space representing normal directions onto a structure amenable to deep learning. The resulting normal estimation method outperforms most of the time the state of the art regarding robustness to outliers, to noise and to point density variation, in the presence of sharp edges, while remaining fast, scaling up to millions of points.},
+	language = {en},
+	number = {5},
+	urldate = {2023-03-03},
+	journal = {Computer Graphics Forum},
+	author = {Boulch, Alexandre and Marlet, Renaud},
+	year = {2016},
+	pages = {281--290},
+}
+
+@article{ienco_combining_2019,
+	title = {Combining {Sentinel}-1 and {Sentinel}-2 {Satellite} {Image} {Time} {Series} for land cover mapping via a multi-source deep learning architecture},
+	volume = {158},
+	issn = {0924-2716},
+	url = {https://www.sciencedirect.com/science/article/pii/S0924271619302278},
+	doi = {10.1016/j.isprsjprs.2019.09.016},
+	abstract = {The huge amount of data currently produced by modern Earth Observation (EO) missions has allowed for the design of advanced machine learning techniques able to support complex Land Use/Land Cover (LULC) mapping tasks. The Copernicus programme developed by the European Space Agency provides, with missions such as Sentinel-1 (S1) and Sentinel-2 (S2), radar and optical (multi-spectral) imagery, respectively, at 10 m spatial resolution with revisit time around 5 days. Such high temporal resolution allows to collect Satellite Image Time Series (SITS) that support a plethora of Earth surface monitoring tasks. How to effectively combine the complementary information provided by such sensors remains an open problem in the remote sensing field. In this work, we propose a deep learning architecture to combine information coming from S1 and S2 time series, namely TWINNS (TWIn Neural Networks for Sentinel data), able to discover spatial and temporal dependencies in both types of SITS. The proposed architecture is devised to boost the land cover classification task by leveraging two levels of complementarity, i.e., the interplay between radar and optical SITS as well as the synergy between spatial and temporal dependencies. Experiments carried out on two study sites characterized by different land cover characteristics (i.e., the Koumbia site in Burkina Faso and Reunion Island, a overseas department of France in the Indian Ocean), demonstrate the significance of our proposal.},
+	language = {en},
+	urldate = {2023-04-30},
+	journal = {ISPRS Journal of Photogrammetry and Remote Sensing},
+	author = {Ienco, Dino and Interdonato, Roberto and Gaetano, Raffaele and Ho Tong Minh, Dinh},
+	month = dec,
+	year = {2019},
+	keywords = {Data fusion, Deep learning, Land cover classification, Satellite Image Time Series, Sentinel-1, Sentinel-2},
+	pages = {11--22},
+}
+
+@article{shanmugam_spectral_2014,
+	title = {Spectral matching approaches in hyperspectral image processing},
+	volume = {35},
+	issn = {0143-1161},
+	url = {https://doi.org/10.1080/01431161.2014.980922},
+	doi = {10.1080/01431161.2014.980922},
+	abstract = {Many spectral matching algorithms, ranging from the traditional clustering techniques to the recent automated matching models, have evolved. This paper provides a review and up-to-date information on the past and current role of the spectral matching approaches adopted in hyperspectral satellite image processing. The need for spectral matching has been deliberated and a list of spectral matching algorithms has been compared and described. A review of the conventional spectral angle measures and the advanced automated spectral matching tools indicates that, for better performance of target detection, there is a need for combining two or more spectral matching techniques. From the studies of several authors, it is inferred that continuous improvement in the matching techniques over the past few years is due to the need to handle and analyse hyperspectral image data for various applications. The need to develop a well-built and specialized spectral library to accommodate the resources from enormous spectral data is suggested. This may improve accuracy in mineral and soil mapping, vegetation species identification and health monitoring, and target detection. The future role of cloud computing in accessing globally distributed spectral libraries and performing spectral matching is highlighted. Rather than inferring that a particular matching algorithm is the best, this paper points out the requirements of an ideal algorithm. With increasing usage of hyperspectral data for resources mapping, the review presented in this paper will certainly benefit the large and emerging community of hyperspectral image users.},
+	number = {24},
+	urldate = {2023-02-27},
+	journal = {International Journal of Remote Sensing},
+	author = {Shanmugam, S. and Srinivasa Perumal, P.},
+	month = dec,
+	year = {2014},
+	note = {Publisher: Taylor \& Francis
+\_eprint: https://doi.org/10.1080/01431161.2014.980922},
+	pages = {8217--8251},
+}
+
 @article{teixeira_systematic_2023,
 	title = {A {Systematic} {Review} on {Automatic} {Insect} {Detection} {Using} {Deep} {Learning}},
 	volume = {13},
@@ -641,24 +760,6 @@ Publisher: Multidisciplinary Digital Publishing Institute},
 	year = {2022},
 	keywords = {Domain transfer, GANs, Infrared image generation},
 	pages = {69--76},
-}
-
-@article{shanmugam_spectral_2014,
-	title = {Spectral matching approaches in hyperspectral image processing},
-	volume = {35},
-	issn = {0143-1161},
-	url = {https://doi.org/10.1080/01431161.2014.980922},
-	doi = {10.1080/01431161.2014.980922},
-	abstract = {Many spectral matching algorithms, ranging from the traditional clustering techniques to the recent automated matching models, have evolved. This paper provides a review and up-to-date information on the past and current role of the spectral matching approaches adopted in hyperspectral satellite image processing. The need for spectral matching has been deliberated and a list of spectral matching algorithms has been compared and described. A review of the conventional spectral angle measures and the advanced automated spectral matching tools indicates that, for better performance of target detection, there is a need for combining two or more spectral matching techniques. From the studies of several authors, it is inferred that continuous improvement in the matching techniques over the past few years is due to the need to handle and analyse hyperspectral image data for various applications. The need to develop a well-built and specialized spectral library to accommodate the resources from enormous spectral data is suggested. This may improve accuracy in mineral and soil mapping, vegetation species identification and health monitoring, and target detection. The future role of cloud computing in accessing globally distributed spectral libraries and performing spectral matching is highlighted. Rather than inferring that a particular matching algorithm is the best, this paper points out the requirements of an ideal algorithm. With increasing usage of hyperspectral data for resources mapping, the review presented in this paper will certainly benefit the large and emerging community of hyperspectral image users.},
-	number = {24},
-	urldate = {2023-02-27},
-	journal = {International Journal of Remote Sensing},
-	author = {Shanmugam, S. and SrinivasaPerumal, P.},
-	month = dec,
-	year = {2014},
-	note = {Publisher: Taylor \& Francis
-\_eprint: https://doi.org/10.1080/01431161.2014.980922},
-	pages = {8217--8251},
 }
 
 @article{choi_kaist_2018,
@@ -4115,23 +4216,6 @@ Program under project P08-TIC-03717.},
 	pages = {6153--6162},
 }
 
-@article{boulch_deep_2016,
-	title = {Deep {Learning} for {Robust} {Normal} {Estimation} in {Unstructured} {Point} {Clouds}},
-	volume = {35},
-	issn = {1467-8659},
-	url = {https://onlinelibrary.wiley.com/doi/abs/10.1111/cgf.12983},
-	doi = {10.1111/cgf.12983},
-	abstract = {Normal estimation in point clouds is a crucial first step for numerous algorithms, from surface reconstruction and scene understanding to rendering. A recurrent issue when estimating normals is to make appropriate decisions close to sharp features, not to smooth edges, or when the sampling density is not uniform, to prevent bias. Rather than resorting to manually-designed geometric priors, we propose to learn how to make these decisions, using ground-truth data made from synthetic scenes. For this, we project a discretized Hough space representing normal directions onto a structure amenable to deep learning. The resulting normal estimation method outperforms most of the time the state of the art regarding robustness to outliers, to noise and to point density variation, in the presence of sharp edges, while remaining fast, scaling up to millions of points.},
-	language = {en},
-	number = {5},
-	urldate = {2023-03-03},
-	journal = {Computer Graphics Forum},
-	author = {Boulch, Alexandre and Marlet, Renaud},
-	year = {2016},
-	note = {\_eprint: https://onlinelibrary.wiley.com/doi/pdf/10.1111/cgf.12983},
-	pages = {281--290},
-}
-
 @inproceedings{lenssen_deep_2020,
 	title = {Deep {Iterative} {Surface} {Normal} {Estimation}},
 	url = {https://openaccess.thecvf.com/content_CVPR_2020/html/Lenssen_Deep_Iterative_Surface_Normal_Estimation_CVPR_2020_paper.html},
@@ -5910,45 +5994,6 @@ Publisher: Nature Publishing Group},
 	author = {{The European Space Agency}},
 }
 
-@misc{noauthor_landsat_2021,
-	title = {Landsat 8},
-	url = {https://landsat.gsfc.nasa.gov/satellites/landsat-8/},
-	abstract = {Landsat 8 launched on February 11, 2013, from Vandenberg Air Force Base, California, on an Atlas-V 401 rocket, with the extended payload fairing (EPF) from United Launch Alliance, LLC. (The Landsat 8 Launch in Quotes.) The Landsat 8 satellite payload consists of two science instruments—the Operational Land Imager (OLI) and the Thermal Infrared Sensor (TIRS).},
-	language = {en-US},
-	urldate = {2023-02-01},
-	journal = {Lansat 8 Mission Details},
-	month = nov,
-	year = {2021},
-}
-
-@misc{noauthor_landsat_2021-1,
-	title = {Landsat 9},
-	url = {https://landsat.gsfc.nasa.gov/satellites/landsat-9/landsat-9-overview/},
-	abstract = {Landsat 9 is the latest satellite in the Landsat series—it continues Landsat’s irreplaceable record of Earth’s land surface. It launched from Vandenberg Space Force Base on September 27, 2021. Landsat 9 largely replicates its predecessor Landsat 8. Landsat 9 carries two science instruments Both instruments have sensors with moderate spatial resolution—15 m (49 ft), 30 m},
-	language = {en-US},
-	urldate = {2023-02-01},
-	journal = {Landsat 9 Overview},
-	month = nov,
-	year = {2021},
-}
-
-@article{masek_landsat_2020,
-	title = {Landsat 9: {Empowering} open science and applications through continuity},
-	volume = {248},
-	issn = {0034-4257},
-	shorttitle = {Landsat 9},
-	url = {https://www.sciencedirect.com/science/article/pii/S0034425720303382},
-	doi = {10.1016/j.rse.2020.111968},
-	abstract = {The history of Earth observation from space is well reflected through the Landsat program. With data collection beginning with Landsat-1 in 1972, the program has evolved technical capabilities while maintaining continuity of land observations. In so doing, Landsat has provided a critical reference for assessing long-term changes to Earth's land environment due to both natural and human forcing. Poised for launch in mid-2021, the joint NASA-USGS Landsat 9 mission will continue this important data record. In many respects Landsat 9 is a clone of Landsat-8. The Operational Land Imager-2 (OLI-2) is largely identical to Landsat 8 OLI, providing calibrated imagery covering the solar reflected wavelengths. The Thermal Infrared Sensor-2 (TIRS-2) improves upon Landsat 8 TIRS, addressing known issues including stray light incursion and a malfunction of the instrument scene select mirror. In addition, Landsat 9 adds redundancy to TIRS-2, thus upgrading the instrument to a 5-year design life commensurate with other elements of the mission. Initial performance testing of OLI-2 and TIRS-2 indicate that the instruments are of excellent quality and expected to match or improve on Landsat 8 data quality. Landsat-9 will maintain the current data acquisition rate of up to 740 scenes per day, with these scenes available from the Landsat archive at no cost to users. In this communication, we provide background and rationale for the Landsat 9 mission, describe the instrument payloads and ground system, and discuss data products available from the Landsat 9 mission through USGS.},
-	language = {en},
-	urldate = {2023-02-01},
-	journal = {Remote Sensing of Environment},
-	author = {Masek, Jeffrey G. and Wulder, Michael A. and Markham, Brian and McCorkel, Joel and Crawford, Christopher J. and Storey, James and Jenstrom, Del T.},
-	month = oct,
-	year = {2020},
-	pages = {111968},
-}
-
 @misc{national_oceanic_and_atmospheric_administration_avhrr3_nodate,
 	title = {{AVHRR}/3},
 	url = {https://www.esa.int/Applications/Observing_the_Earth/Meteorological_missions/MetOp/About_AVHRR_3},
@@ -5957,20 +6002,6 @@ Publisher: Nature Publishing Group},
 	urldate = {2023-02-01},
 	journal = {About AVHRR/3},
 	author = {{National Oceanic and Atmospheric Administration}},
-}
-
-@book{emery_introduction_2017,
-	title = {Introduction to {Satellite} {Remote} {Sensing}: {Atmosphere}, {Ocean}, {Land} and {Cryosphere} {Applications}},
-	isbn = {978-0-12-809259-0},
-	shorttitle = {Introduction to {Satellite} {Remote} {Sensing}},
-	abstract = {Introduction to Satellite Remote Sensing: Atmosphere, Ocean and Land Applications is the first reference book to cover ocean applications, atmospheric applications, and land applications of remote sensing.  Applications of remote sensing data are finding increasing application in fields as diverse as wildlife ecology and coastal recreation management. The technology engages electromagnetic sensors to measure and monitor changes in the earth’s surface and atmosphere. The book opens with an introduction to the history of remote sensing, starting from when the phrase was first coined. It goes on to discuss the basic concepts of the various systems, including atmospheric and ocean, then closes with a detailed section on land applications.  Due to the cross disciplinary nature of the authors’ experience and the content covered, this is a must have reference book for all practitioners and students requiring an introduction to the field of remote sensing. Provides study questions at the end of each chapter to aid learning Covers all satellite remote sensing technologies, allowing readers to use the text as instructional material Includes the most recent technologies and their applications, allowing the reader to stay up-to-date Delves into laser sensing (LIDAR) and commercial satellites (DigitalGlobe) Presents examples of specific satellite missions, including those in which new technology has been introduced},
-	language = {en},
-	publisher = {Elsevier},
-	author = {Emery, Bill and Camps, Adriano},
-	month = aug,
-	year = {2017},
-	note = {Google-Books-ID: sZLUDQAAQBAJ},
-	keywords = {Science / Earth Sciences / Geology, Science / Physics / Geophysics},
 }
 
 @book{lillesand_remote_2015,
@@ -8015,20 +8046,6 @@ Publisher: Schweizerbart Science Publishers},
 	year = {2021},
 	keywords = {Drones, Forest landscape restoration, Hyperspectral remote sensing, Leaf area density, Lidar remote sensing, Tropical forests, Vegetation indices},
 	pages = {112582},
-}
-
-@techreport{noauthor_landsat_2020,
-	address = {Reston, VA},
-	type = {{USGS} {Numbered} {Series}},
-	title = {Landsat 9},
-	url = {http://pubs.er.usgs.gov/publication/fs20193008},
-	abstract = {Landsat 9 is a partnership between the National Aeronautics and Space Administration (NASA) and the U.S. Geological Survey (USGS) that will continue the Landsat program’s critical role of repeat global observations for monitoring, understanding, and managing Earth’s natural resources. Since 1972, Landsat data have provided a unique resource for those who work in agriculture, geology, forestry, regional planning, education, mapping, and global-change research. Landsat images have also proved invaluable to the International Charter: Space and Major Disasters, supporting emergency response and disaster relief to save lives. With the addition of Landsat 9, the Landsat program’s record of land imaging will be extended to over half a century.},
-	number = {2019-3008},
-	urldate = {2021-10-07},
-	institution = {U.S. Geological Survey},
-	year = {2020},
-	doi = {10.3133/fs20193008},
-	pages = {2},
 }
 
 @article{heckel_predicting_2020,
