--- a/thesis.tex
+++ b/thesis.tex
@@ -305,7 +305,7 @@
 
 % The glossary needs to be compiled on the command line with 'makeglossaries main' from the template directory
 
-\pagelayout{smallmargin} 
+\pagelayout{margin} 
 \setglossarystyle{listgroup} % Set the style of the glossary (see https://en.wikibooks.org/wiki/LaTeX/Glossary for a reference)
 \printglossary[title=Acronyms, toctitle=Acronyms] % Output the glossary, 'title' is the chapter heading for the glossary, toctitle is the table of contents heading
 
