--- a/thesis.tex
+++ b/thesis.tex
@@ -333,9 +333,9 @@
 \blankPage
 \partIntro{I}{Introduction and overview}{This section introduces a shallow background of Remote Sensing as well as the aim and objectives of this doctoral dissertation. Then, the state-of-the-art on the fusion and simulation of Remote Sensing data is presented.}
 
-% \input{chapters/introduction.tex}
-% \input{chapters/fundamentals.tex}
-% \input{chapters/context.tex}
+\input{chapters/introduction.tex}
+\input{chapters/fundamentals.tex}
+\input{chapters/context.tex}
 
 %----------------------------------------------------------------------------------------
 %	PART II
@@ -347,8 +347,8 @@
 \oddChapter
 \partIntro{II}{Materials and image fusion}{The first part of this chapter introduces the materials utilized in this research work. Specifications and shortcomings of each device are here illustrated and solved for the sake of clarity and to avoid its repeatability through this dissertation. Then, images are processed and matched to compose a multi-layer system that will help to construct enriched 3D models in later chapters. }
 
-% \input{chapters/technology.tex}
-% \input{chapters/image_fusion.tex}
+\input{chapters/technology.tex}
+\input{chapters/image_fusion.tex}
 
 %----------------------------------------------------------------------------------------
 %	PART III
@@ -361,9 +361,9 @@
 \oddChapter
 \partIntro{III}{Point cloud enrichment}{This chapter comprises the generation of thermal and multispectral point clouds. Remotely sensed data is projected over large \acrshort{rgb} point clouds to obtain denser point clouds from low-resolution imagery. The evolution of this approach is shown throughout this chapter; the first proposal is solved in a sequential manner, whereas the methodology of the last work was completely implemented in the \acrshort{gpu}. }
 
-% \input{chapters/thermal_point_cloud.tex}
+\input{chapters/thermal_point_cloud.tex}
 \input{chapters/multi_thermal_point_cloud}
-% \input{chapters/hyper_point_cloud}
+\input{chapters/hyper_point_cloud}
 
 %----------------------------------------------------------------------------------------
 %	PART IV
@@ -377,8 +377,8 @@
 % Finally, the emulated sensor is applied to the optimization of \acrshort{lidar} scans within 3D buildings. 
 }
 
-% \input{chapters/lidar_remote_sensing.tex}
-% \input{chapters/lidar_intensity.tex}
+\input{chapters/lidar_remote_sensing.tex}
+\input{chapters/lidar_intensity.tex}
 
 %----------------------------------------------------------------------------------------
 %	PART V
@@ -404,7 +404,7 @@
 \oddChapter
 \partIntro{VI}{Concluding remarks}{}
 
-% \input{chapters/conclusions.tex}
+\input{chapters/conclusions.tex}
 
 % \pagelayout{wide} % No margins
 % \addpart{Class Options, Commands and Environments}
