--- a/thesis.tex
+++ b/thesis.tex
@@ -220,6 +220,8 @@
 %----------------------------------------------------------------------------------------
 
 % \input{chapters/cover_information.tex}
+\input{chapters/cover_information_alternative_spanish.tex}
+\blankPage
 \input{chapters/cover_information_alternative.tex}
 
 %----------------------------------------------------------------------------------------
@@ -234,205 +236,205 @@
 %	PRESENTATION AND SIGNS
 %----------------------------------------------------------------------------------------
 
-\blankPage
-\blankPage
-\input{chapters/presentation.tex}
+% \blankPage
+% \blankPage
+% \input{chapters/presentation.tex}
 
-%----------------------------------------------------------------------------------------
-%	ABSTRACT
-%----------------------------------------------------------------------------------------
-
-\pagelayout{smallmargin}
-\blankPage
-\input{chapters/abstract.tex}
-
-\oddCoverChapter
-\input{chapters/abstract_spanish.tex}
-\pagelayout{wide}
-
-%----------------------------------------------------------------------------------------
-%	PUBLICATIONS
-%----------------------------------------------------------------------------------------
-
-\input{chapters/publications.tex}
-
-%----------------------------------------------------------------------------------------
-%	ACKNOWLEDGMENTS
-%----------------------------------------------------------------------------------------
-
-\input{chapters/acknowledgments.tex}
-
-%----------------------------------------------------------------------------------------
-%	TABLE OF CONTENTS & LIST OF FIGURES/TABLES
-%----------------------------------------------------------------------------------------
-
-\begingroup % Local scope for the following commands
-
-% Define the style for the TOC, LOF, and LOT
-%\setstretch{1} % Uncomment to modify line spacing in the ToC
-%\hypersetup{linkcolor=blue} % Uncomment to set the colour of links in the ToC
-\setlength{\textheight}{230\hscale} % Manually adjust the height of the ToC pages
-
-% Turn on compatibility mode for the etoc package
-\etocstandarddisplaystyle % "toc display" as if etoc was not loaded
-\etocstandardlines % "toc lines as if etoc was not loaded
-
-\tableofcontents % Output the table of contents
-
-\listoffigures % Output the list of figures
-
-% Comment both of the following lines to have the LOF and the LOT on 
-% different pages
-% \let\cleardoublepage\bigskip
-% \let\clearpage\bigskip
-
-\listoftables % Output the list of tables
-
-\listoflstlistings % Output the list of listings
-
-\endgroup
-
-%----------------------------------------------------------------------------------------
-%	MAIN BODY
-%----------------------------------------------------------------------------------------
-
-\mainmatter % Denotes the start of the main document content, resets page numbering and uses arabic numbers
-\setchapterstyle{kao} % Choose the default chapter heading style
-
-%----------------------------------------------------------------------------------------
-%	GLOSSARY
-%----------------------------------------------------------------------------------------
-
-% The glossary needs to be compiled on the command line with 'makeglossaries main' from the template directory
-
-\pagelayout{margin} 
-\setglossarystyle{listgroup} % Set the style of the glossary (see https://en.wikibooks.org/wiki/LaTeX/Glossary for a reference)
-\printglossary[title=Acronyms, toctitle=Acronyms] % Output the glossary, 'title' is the chapter heading for the glossary, toctitle is the table of contents heading
-
-%----------------------------------------------------------------------------------------
-%	NOMENCLATURE
-%----------------------------------------------------------------------------------------
-
-% The nomenclature needs to be compiled on the command line with 'makeindex main.nlo -s nomencl.ist -o main.nls' from the template directory
+% %----------------------------------------------------------------------------------------
+% %	ABSTRACT
+% %----------------------------------------------------------------------------------------
 
 % \pagelayout{smallmargin}
-% \include{chapters/nomenclature.tex}
-% \pagelayout{margin}
-
-%----------------------------------------------------------------------------------------
-%	THESIS
-%----------------------------------------------------------------------------------------
-
-%----------------------------------------------------------------------------------------
-%	PART I
-%----------------------------------------------------------------------------------------
+% \blankPage
+% \input{chapters/abstract.tex}
 
 % \oddCoverChapter
-% \chapterBackground{figs/chapters/b5/Chapter1_01.png}{figs/chapters/b5/Chapter1_02.png}{Radu Carstean}{Pawn Mate}{Sketchfab}{black}
+% \input{chapters/abstract_spanish.tex}
+% \pagelayout{wide}
 
-\blankPage
-\partIntro{I}{Introduction and overview}{This section introduces a shallow background of Remote Sensing as well as the aim and objectives of this doctoral dissertation. Then, the state-of-the-art on the fusion and simulation of Remote Sensing data is presented.}
+% %----------------------------------------------------------------------------------------
+% %	PUBLICATIONS
+% %----------------------------------------------------------------------------------------
+
+% \input{chapters/publications.tex}
+
+% %----------------------------------------------------------------------------------------
+% %	ACKNOWLEDGMENTS
+% %----------------------------------------------------------------------------------------
+
+% \input{chapters/acknowledgments.tex}
+
+% %----------------------------------------------------------------------------------------
+% %	TABLE OF CONTENTS & LIST OF FIGURES/TABLES
+% %----------------------------------------------------------------------------------------
+
+% \begingroup % Local scope for the following commands
+
+% % Define the style for the TOC, LOF, and LOT
+% %\setstretch{1} % Uncomment to modify line spacing in the ToC
+% %\hypersetup{linkcolor=blue} % Uncomment to set the colour of links in the ToC
+% \setlength{\textheight}{230\hscale} % Manually adjust the height of the ToC pages
+
+% % Turn on compatibility mode for the etoc package
+% \etocstandarddisplaystyle % "toc display" as if etoc was not loaded
+% \etocstandardlines % "toc lines as if etoc was not loaded
+
+% \tableofcontents % Output the table of contents
+
+% \listoffigures % Output the list of figures
+
+% % Comment both of the following lines to have the LOF and the LOT on 
+% % different pages
+% % \let\cleardoublepage\bigskip
+% % \let\clearpage\bigskip
+
+% \listoftables % Output the list of tables
+
+% \listoflstlistings % Output the list of listings
+
+% \endgroup
+
+% %----------------------------------------------------------------------------------------
+% %	MAIN BODY
+% %----------------------------------------------------------------------------------------
+
+% \mainmatter % Denotes the start of the main document content, resets page numbering and uses arabic numbers
+% \setchapterstyle{kao} % Choose the default chapter heading style
+
+% %----------------------------------------------------------------------------------------
+% %	GLOSSARY
+% %----------------------------------------------------------------------------------------
+
+% % The glossary needs to be compiled on the command line with 'makeglossaries main' from the template directory
+
+% \pagelayout{margin} 
+% \setglossarystyle{listgroup} % Set the style of the glossary (see https://en.wikibooks.org/wiki/LaTeX/Glossary for a reference)
+% \printglossary[title=Acronyms, toctitle=Acronyms] % Output the glossary, 'title' is the chapter heading for the glossary, toctitle is the table of contents heading
+
+% %----------------------------------------------------------------------------------------
+% %	NOMENCLATURE
+% %----------------------------------------------------------------------------------------
+
+% % The nomenclature needs to be compiled on the command line with 'makeindex main.nlo -s nomencl.ist -o main.nls' from the template directory
+
+% % \pagelayout{smallmargin}
+% % \include{chapters/nomenclature.tex}
+% % \pagelayout{margin}
+
+% %----------------------------------------------------------------------------------------
+% %	THESIS
+% %----------------------------------------------------------------------------------------
+
+% %----------------------------------------------------------------------------------------
+% %	PART I
+% %----------------------------------------------------------------------------------------
+
+% % \oddCoverChapter
+% % \chapterBackground{figs/chapters/b5/Chapter1_01.png}{figs/chapters/b5/Chapter1_02.png}{Radu Carstean}{Pawn Mate}{Sketchfab}{black}
+
+% \blankPage
+% \partIntro{I}{Introduction and overview}{This section introduces a shallow background of Remote Sensing as well as the aim and objectives of this doctoral dissertation. Then, the state-of-the-art on the fusion and simulation of Remote Sensing data is presented.}
 
 % \input{chapters/introduction.tex}
 % \input{chapters/fundamentals.tex}
 % \input{chapters/context.tex}
 
-%----------------------------------------------------------------------------------------
-%	PART II
-%----------------------------------------------------------------------------------------
+% %----------------------------------------------------------------------------------------
+% %	PART II
+% %----------------------------------------------------------------------------------------
 
-% \oddCoverChapter
-% \chapterBackground{figs/chapters/b5/Chapter2_01.png}{figs/chapters/b5/Chapter2_02.png}{wintrez}{Mandalorian}{Sketchfab}{black}
+% % \oddCoverChapter
+% % \chapterBackground{figs/chapters/b5/Chapter2_01.png}{figs/chapters/b5/Chapter2_02.png}{wintrez}{Mandalorian}{Sketchfab}{black}
 
-\oddChapter
-\partIntro{II}{Materials and image fusion}{The first part of this chapter introduces the materials utilized in this research work. Specifications and shortcomings of each device are here illustrated and solved for the sake of clarity and to avoid its repeatability through this dissertation. Then, images are processed and matched to compose a multi-layer system that will help to construct enriched 3D models in later chapters. }
+% \oddChapter
+% \partIntro{II}{Materials and image fusion}{The first part of this chapter introduces the materials utilized in this research work. Specifications and shortcomings of each device are here illustrated and solved for the sake of clarity and to avoid its repeatability through this dissertation. Then, images are processed and matched to compose a multi-layer system that will help to construct enriched 3D models in later chapters. }
 
 % \input{chapters/technology.tex}
 % \input{chapters/image_fusion.tex}
 
-%----------------------------------------------------------------------------------------
-%	PART III
-%----------------------------------------------------------------------------------------
+% %----------------------------------------------------------------------------------------
+% %	PART III
+% %----------------------------------------------------------------------------------------
 
-% \chapterBackground{figs/chapters/b5/Chapter3_01.png}{figs/chapters/b5/Chapter3_02.png}{Igor Tretyakov}{Low poly city}{Sketchfab}{black}
-% \oddCoverChapter
-% \chapterBackground{figs/chapters/b5/Chapter7_01.png}{figs/chapters/b5/Chapter7_02.png}{Alexander Ruz}{Combat robot}{Sketchfab}{black}
+% % \chapterBackground{figs/chapters/b5/Chapter3_01.png}{figs/chapters/b5/Chapter3_02.png}{Igor Tretyakov}{Low poly city}{Sketchfab}{black}
+% % \oddCoverChapter
+% % \chapterBackground{figs/chapters/b5/Chapter7_01.png}{figs/chapters/b5/Chapter7_02.png}{Alexander Ruz}{Combat robot}{Sketchfab}{black}
 
-\oddChapter
-\partIntro{III}{Point cloud enrichment}{This chapter comprises the generation of thermal and multispectral point clouds. Remotely sensed data is projected over large \acrshort{rgb} point clouds to obtain denser point clouds from low-resolution imagery. The evolution of this approach is shown throughout this chapter; the first proposal is solved in a sequential manner, whereas the methodology of the last work was completely implemented in the \acrshort{gpu}. }
+% \oddChapter
+% \partIntro{III}{Point cloud enrichment}{This chapter comprises the generation of thermal and multispectral point clouds. Remotely sensed data is projected over large \acrshort{rgb} point clouds to obtain denser point clouds from low-resolution imagery. The evolution of this approach is shown throughout this chapter; the first proposal is solved in a sequential manner, whereas the methodology of the last work was completely implemented in the \acrshort{gpu}. }
 
-% % % \input{chapters/thermal_point_cloud.tex}
-% % % \input{chapters/multi_thermal_point_cloud}
-% % % \input{chapters/hyper_point_cloud}
+% \input{chapters/thermal_point_cloud.tex}
+% \input{chapters/multi_thermal_point_cloud}
+% \input{chapters/hyper_point_cloud}
 
-%----------------------------------------------------------------------------------------
-%	PART IV
-%----------------------------------------------------------------------------------------
+% %----------------------------------------------------------------------------------------
+% %	PART IV
+% %----------------------------------------------------------------------------------------
 
-% \oddCoverChapter
-% \chapterBackground{figs/chapters/b5/Chapter4_01.png}{figs/chapters/b5/Chapter4_02.png}{DailyArt}{Stone lion}{Sketchfab}{black}
+% % \oddCoverChapter
+% % \chapterBackground{figs/chapters/b5/Chapter4_01.png}{figs/chapters/b5/Chapter4_02.png}{DailyArt}{Stone lion}{Sketchfab}{black}
 
-\oddChapter
-\partIntro{IV}{Generation of synthetic data}{This part is split into two chapters. The first one covers the efficient simulation of a \acrshort{lidar} sensor aimed at providing large point cloud datasets for the training of Deep Learning networks. Then, the \acrshort{lidar} datasets are further enriched with intensity data by modelling the surfaces' \acrshort{brdf}. 
-% Finally, the emulated sensor is applied to the optimization of \acrshort{lidar} scans within 3D buildings. 
-}
+% \oddChapter
+% \partIntro{IV}{Generation of synthetic data}{This part is split into two chapters. The first one covers the efficient simulation of a \acrshort{lidar} sensor aimed at providing large point cloud datasets for the training of Deep Learning networks. Then, the \acrshort{lidar} datasets are further enriched with intensity data by modelling the surfaces' \acrshort{brdf}. 
+% % Finally, the emulated sensor is applied to the optimization of \acrshort{lidar} scans within 3D buildings. 
+% }
 
-% % \input{chapters/lidar_remote_sensing.tex}
-% % \input{chapters/lidar_intensity.tex}
+% \input{chapters/lidar_remote_sensing.tex}
+% \input{chapters/lidar_intensity.tex}
 
-%----------------------------------------------------------------------------------------
-%	PART V
-%----------------------------------------------------------------------------------------
+% %----------------------------------------------------------------------------------------
+% %	PART V
+% %----------------------------------------------------------------------------------------
 
-% \oddCoverChapter
-% \chapterBackground{figs/chapters/b5/Chapter5_01.png}{figs/chapters/b5/Chapter5_02.png}{Georg Klein}{Viking ship}{Sketchfab}{white}
+% % \oddCoverChapter
+% % \chapterBackground{figs/chapters/b5/Chapter5_01.png}{figs/chapters/b5/Chapter5_02.png}{Georg Klein}{Viking ship}{Sketchfab}{white}
 
-\oddChapter
-\partIntro{V}{Applications of \\remotely sensed data}{This chapter comprises several case studies where previously processed and generated data are applied to the planning of acquisition processes as well as to the detection and classification of features. First, the synthetic \acrshort{lidar} data will be used for the planning of scans, in order to optimize and minimize the locations required to monitor buildings. Then, thermographic point clouds are applied to the detection of landscape features that could be related to buried remains of an archaeological site. Finally, the hyperspectral data of a vineyard plot is corrected to help in the classification of different grapevine varieties using Deep Learning.  }
+% \oddChapter
+% \partIntro{V}{Applications of \\remotely sensed data}{This chapter comprises several case studies where previously processed and generated data are applied to the planning of acquisition processes as well as to the detection and classification of features. First, the synthetic \acrshort{lidar} data will be used for the planning of scans, in order to optimize and minimize the locations required to monitor buildings. Then, thermographic point clouds are applied to the detection of landscape features that could be related to buried remains of an archaeological site. Finally, the hyperspectral data of a vineyard plot is corrected to help in the classification of different grapevine varieties using Deep Learning.  }
 
 % \input{chapters/lidar_optimization}
 % \input{chapters/castle_puerta_arenas}
 % \input{chapters/vineyard_classification}
 
-%----------------------------------------------------------------------------------------
-%	PART VI
-%----------------------------------------------------------------------------------------
+% %----------------------------------------------------------------------------------------
+% %	PART VI
+% %----------------------------------------------------------------------------------------
 
-% \oddCoverChapter
-% \chapterBackground{figs/chapters/b5/Chapter6_01.png}{figs/chapters/b5/Chapter6_02.png}{Rigsters}{Deer group}{Sketchfab}{white}
+% % \oddCoverChapter
+% % \chapterBackground{figs/chapters/b5/Chapter6_01.png}{figs/chapters/b5/Chapter6_02.png}{Rigsters}{Deer group}{Sketchfab}{white}
 
-\oddChapter
-\partIntro{VI}{Concluding remarks}{}
+% \oddChapter
+% \partIntro{VI}{Concluding remarks}{}
 
 % \input{chapters/conclusions.tex}
 
-% \pagelayout{wide} % No margins
-% \addpart{Class Options, Commands and Environments}
-% \pagelayout{margin} % Restore margins
+% % \pagelayout{wide} % No margins
+% % \addpart{Class Options, Commands and Environments}
+% % \pagelayout{margin} % Restore margins
 
-% \input{chapters/options.tex}
-% \input{chapters/textnotes.tex}
-%\input{chapters/figsntabs.tex}
-% \input{chapters/references.tex}
+% % \input{chapters/options.tex}
+% % \input{chapters/textnotes.tex}
+% %\input{chapters/figsntabs.tex}
+% % \input{chapters/references.tex}
 
-% \pagelayout{wide} % No margins
-% \addpart{Design and Additional Features}
-% \pagelayout{margin} % Restore margins
+% % \pagelayout{wide} % No margins
+% % \addpart{Design and Additional Features}
+% % \pagelayout{margin} % Restore margins
 
-% \input{chapters/layout.tex}
-% \input{chapters/mathematics.tex}
+% % \input{chapters/layout.tex}
+% % \input{chapters/mathematics.tex}
 
-%----------------------------------------------------------------------------------------
-%	PART VII
-%----------------------------------------------------------------------------------------
+% %----------------------------------------------------------------------------------------
+% %	PART VII
+% %----------------------------------------------------------------------------------------
 
-\appendix % From here onwards, chapters are numbered with letters, as is the appendix convention
+% \appendix % From here onwards, chapters are numbered with letters, as is the appendix convention
 
-% \oddCoverChapter
-% \chapterBackground{figs/chapters/b5/Chapter8_01.png}{figs/chapters/b5/Chapter8_02.png}{Mateusz Woliński}{Seraph}{Sketchfab}{black}
+% % \oddCoverChapter
+% % \chapterBackground{figs/chapters/b5/Chapter8_01.png}{figs/chapters/b5/Chapter8_02.png}{Mateusz Woliński}{Seraph}{Sketchfab}{black}
 
-\oddChapter
-\partIntro{VII}{Appendices}{}
+% \oddChapter
+% \partIntro{VII}{Appendices}{}
 
 % \input{chapters/preamble_spanish}
 % \input{chapters/introduction_spanish}
